k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oficina-execution
  labels:
    oficina/service: execution
